[package]
name = "laz_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.9.6"
native-tls = "0.2"
rustls = { version = "0.22.0-alpha.6" }
webpki-roots = "0.26.1"
[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true